--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #222;
+    background: #222229;
     color: #eee;
     display: flex;
     flex-direction: column;
@@ -13,6 +13,10 @@ header{
 }
 nav a{
     padding: 1em;
+    text-align: center;
+}
+a:link, a:visited{
+    color: rgb(255, 174, 0);
 }
 .logo{
     width: 3em;
@@ -44,11 +48,12 @@ h1{
 }
 section{
     max-width: 70em;
-    padding: 5em 1em;
+    padding: 5em 1em 0em 1em;
 }
 
 section img{
     width: auto;
+    max-width: 50%;
 }
 
 section p{
@@ -62,4 +67,22 @@ footer{
     width: 50vw;
     margin: 0;
     padding: 0;
+}
+
+@media (orientation: portrait){
+    .left, .right{ flex-direction: column-reverse; place-items: center; }
+    .left p, .right p{
+        text-align: center;
+        width: 50%;
+    }
+    section img{max-width: 80%;}
+    header{
+        width: 100%;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-gap: 1em;
+        place-items: center;
+    }
+    .logo{grid-area: 1/1/2/2; place-self: start;}
+    nav{grid-area: 2/1/3/2;}
 }
